--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -93,3 +93,70 @@
 	year={2011},
 	publisher={Springer}
 }
+
+@article{soda2021networks,
+	title={Networks, creativity, and time: Staying creative through brokerage and network rejuvenation},
+	author={Soda, Giuseppe and Mannucci, Pier Vittorio and Burt, Ronald S},
+	journal={Academy of Management Journal},
+	volume={64},
+	number={4},
+	pages={1164--1190},
+	year={2021},
+	publisher={Academy of Management Briarcliff Manor, NY}
+}
+
+@article{bettinazzi2021stakeholder,
+	title={Stakeholder orientation and divestiture activity},
+	author={Bettinazzi, Emanuele LM and Feldman, Emilie R},
+	journal={Academy of Management Journal},
+	volume={64},
+	number={4},
+	pages={1078--1096},
+	year={2021},
+	publisher={Academy of Management Briarcliff Manor, NY}
+}
+
+@article{naumovska2021strength,
+	title={Strength and weakness in numbers? Unpacking the role of prevalence in the diffusion of reverse mergers},
+	author={Naumovska, Ivana and Zajac, Edward J and Lee, Peggy M},
+	journal={Academy of Management Journal},
+	volume={64},
+	number={2},
+	pages={409--434},
+	year={2021},
+	publisher={Academy of Management Briarcliff Manor, NY}
+}
+
+@article{glerum2021trainer,
+	title={The trainer matters: Cross-classified models of trainee reactions.},
+	author={Glerum, David R and Joseph, Dana L and McKenny, Aaron F and Fritzsche, Barbara A},
+	journal={Journal of Applied Psychology},
+	volume={106},
+	number={2},
+	pages={281},
+	year={2021},
+	publisher={American Psychological Association}
+}
+
+@article{gromping2007estimators,
+	title={Estimators of relative importance in linear regression based on variance decomposition},
+	author={Gr{\"o}mping, Ulrike},
+	journal={The American Statistician},
+	volume={61},
+	number={2},
+	pages={139--147},
+	year={2007},
+	publisher={Taylor \& Francis}
+}
+
+
+@article{azen2003dominance,
+	title={The dominance analysis approach for comparing predictors in multiple regression.},
+	author={Azen, Razia and Budescu, David V},
+	journal={Psychological methods},
+	volume={8},
+	number={2},
+	pages={129},
+	year={2003},
+	publisher={American Psychological Association}
+}
