--- a/CountDominance.tex
+++ b/CountDominance.tex
@@ -11,9 +11,9 @@
 \begin{document}
 	
 \runninghead{Luchman}
-\title{Dominance analysis for count dependent variables}
+\title{Dominance analysis for count regression models}
 \author{Joseph N. Luchman\affilnum{1}}
-\affiliation{\affilnum{1}Fors Marsh Group LLC}
+\affiliation{\affilnum{1}Fors Marsh}
 
 \begin{abstract}
 	Determining independent variable relative importance is a highly useful practice in organizational science.  Whereas techniques to determine independent variable importance are available for normally distributed and binary dependent variable models, such techniques have not been extended to count dependent variables (CDVs).  The current work extends previous research on binary and multi-category dependent variable relative importance analysis to provide a methodology for conducting relative importance analysis on CDV models using dominance analysis (DA).  Moreover, the current work provides a set of comprehensive data analytic examples that demonstrate how and when to use CDV models in a DA and the advantages general DA statistics offer in interpreting CDV model results.  Moreover, the current work outlines best practices for determining independent variable relative importance for CDVs using replaceable examples on data from the publicly available National Longitudinal Survey of Youth 1979 cohort.  The present work then contributes to the literature by using in-depth data analytic examples to outline best practices in conducting relative importance analysis for CDV models and by highlighting unique information DA results provide about CDV models.
@@ -25,25 +25,23 @@
 
 \section{Introduction}
 
-	Organizational scientists conduct research on work-related problems across many topics including job performance, employee wellness, and effective work staffing.  
-	Quantitative research on these topics often requires that researchers use data that are in the form of discrete, sometimes infrequent, events such as number of contracts won in a year, number of complaints received in a month, or number of days absent for illness in a business quarter. % use actual examples here?
-	Discrete, infrequent events are modeled using \textit{count regression models/CRMs} and are commonly applied in organizational science but can present additional complexities for the interpretation of analysis results.
-	The most significant complication is that CRMs diverge in important ways from the statistical assumptions made of the Normal or Gaussian distributed linear regression model/LRM---by far the most common predictive model applied in organizational science \cite{}.
+	Quantitative research on topics such as job performance, employee wellness, and business strategy often require that organizational researchers use data that are in the form of discrete, sometimes infrequent, events such as number of contracts won in a year, number of complaints received in a month, or number of days absent for illness in a business quarter. % use actual examples here?
+	Discrete, infrequent events are commonly encountered as dependent variables in organizational science \cite[e.g.,]{bettinazzi2021stakeholder,naumovska2021strength,soda2021networks} and are modeled using \textit{count regression models/CRMs}   %howto get the 'e.g.,' at the beginning?  Cite Spain et al here?
+	However widely used, CRMs are are complicated to interpret.
+	The primary complication with interpreting CRMs is that their functional form differs from the simpler Normal or Gaussian distributed linear regression model/LRM that tends to be better understood among organizational scientists.  % do I need to support this statement?
+	 
+	\textit{Poisson regression/PR} and \textit{negative Binomial regression/NBR} are CRMs that are based on probability distributions suitable for non-negative integer values but are complicated to interpret as they use log-linear link functions (i.e., have the form $e^{\sum\beta x}$) to adapt their predictions to the non-negative range of real numbers \cite{blevins2015count}.
+	CRMs have additional complexities as they are often generated as aggregations of events over a specific time period.
+	For instance, a count measure might be the number of organizations adopting a specific practice in a time period \cite{naumovska2021strength} or number of divestitures in a year \cite{bettinazzi2021stakeholder}. 
+	When the period of aggregation differs across observations in the data, additional \emph{offset} terms are needed to re-establish parity across observations \cite[see, for an example]{glerum2021trainer}.
+	Furthermore, some count measures suffer from \emph{zero inflation}; a situation in which there are more 0 values than would be expected from a PR or NBR model and can be remedied by a specialized zero-inflation model \cite[again see, for an example]{glerum2021trainer}.
 	
-	CRMs diverge from LRM as the discrete events used as dependent variables have truncated distributions that cannot range lower than 0 and tend to increase and decrease non-linearly.  
-	For example, \textit{Poisson regression/PR} as well as \textit{negative Binomial regression/NBR} are two commonly used CRMs in the organizational sciences \cite{}. 
-	Both PR and NBR are log-linear models (i.e., have the form $e^{\beta}$) to adapt their predictions to the non-negative range of real numbers and follow probability distributions that require non-negative integer values. % are non-negative integers 'required' or just work better?
-	PR and NBR are then both conceptually more applicable to count data but also are far more complex to interpret than LRM as they are log-linear.
-	In addition, count data are often generated as aggregations of events over a specific time period such as a firm over a month's time or across a collective of conceptually related sub-units such as individual team members in a team.
-	CRMs used to model these aggregated events then require the application of additional considerations to establish parity across observations when time windows or collective sizes differ---an issue that tends to be less applicable in LRM.
+	The complexities of CRM interpretation and additional considerations such as offset terms also affect model postestimation methods such as relative importance analysis. 
+	To date, published methodological work on discussed how to apply relative importance analysis to similarly complex models such as binary \cite{azen2009using}, ordered, and multinomial logit models \cite{luchman2014relative} but has not provided an extensive discussion relative importance analysis with CRMs. 
+	Relative importance analysis is a widely used model postestimation method used for interpretation that adds detail to the estimation of parameter estimates and can provide practically useful information about independent variable/IV predictive utility \cite{tonidandel2011relative}.  
+	Among relative importance analysis methods, \cite[dominance analysis/DA]{azen2003dominance} is most often recommended as a method that has a strong conceptual foundation \cite{gromping2007estimators} and flexible implementation in terms of extensibility \cite[see]{luchman2021determining}.
 	
-	The complexities of CRM estimation and interpretation is further compounded when considering how to determine the relative importance of independent variables/IVs from CRMs.
-	Relative importance analysis is a useful interpretation tool that adds detail to the estimation of parameter estimates \cite{tonidandel2011relative} and can provide practically useful information about IV predictive utility \cite{}.  
-	Among relative importance analysis methods, \textit{dominance analysis/DA} \cite{} is most often recommended as a method that has the strongest conceptual foundation \cite{} and most flexible implementation in terms of extensibility \cite{luchman2021determining}.
-	Published methodological work on DA has discussed multiple intrinsically non-linear models including binary \cite{azen2009using}, ordered, and multinomial logit \cite{luchman2014relative} models but has not provided an extensive discussion of how to implement and interpret DA with CRMs. 
-	As a consequence, despite the conceptual applicability of DA to CRMs, there have been no published research that applies DA to CRMs to the knowledge of the author.
-	
-	% go on here to outline how this article is intended to remediate this and offer suggestions to apply
+	% ended here
 	
 	This manuscript extends the literature on CRMs and DA in three ways.
 	First, this work provides a discussion of and recommendations for DA as applied to CRMs commonly used in organizational science.
@@ -70,8 +68,25 @@
 	The payoff from the predictive model is the value of the model fit statistic; usually this payoff is an $R^2$. % more on what the "payoff" means?
 	
 	This methodology can be applied to predictive modeling in a conceptually straightforward way.
-	 Predictive models are, in a sense, a game in which independent variables cooperate to produce a payoff in the form of predicting the dependent variable. 
+	Predictive models are, in a sense, a game in which independent variables cooperate to produce a payoff in the form of predicting the dependent variable. 
 	The component of the decomposition/the proportion of the payoff ascribed to each independent variables can then be interpreted as the IVs importance in the context of the model as that is the contribution it makes to predicting the dependent variable.
+	
+	... begin with SV canonical compu... simplify to DA ...
+	
+	\begin{equation}
+		SV_{X_v} = \frac{\sum_{p}^{i} C^{i}_{X_v}}{p}
+	\end{equation}
+	
+	
+	General dominance is computed as:
+	
+	\begin{equation}
+		C_{X_v} = \frac{\sum_{p}^{i} C^{i}_{X_v}}{p}
+	\end{equation}
+	%CXv=Σpi=1CiXvp
+	
+	Where, $C^{i}_{X_v}$ are the conditional dominance statistics for $X_v$ with $i$ IVs. 
+	Hence, the general dominance statistics are the arithmetic average of all the conditional dominance statistics for an IV.
 	
 	In application, DA determines the relative importance of IVs in a predictive model based on each IV’s contribution to an overall model fit statistic—a value that describes the entire model’s predictions on a dataset at once. 
 	DA’s goal extends beyond just the decomposition of the focal model fit statistic. 
@@ -96,16 +111,6 @@
 	Where $S_i$ is a subset of IVs not including $X_v$ and [p-1i-1] is the number of distinct combinations produced choosing the number of elements in the bottom value (i-1) given the number of elements in the top value (p-1; i.e., the value produced by choose(p-1, i-1)).
 	
 	In effect, the formula above amounts to an average of the differences between each model containing $X_v$ from the comparable model not containing it by the number of IVs in the model total.
-	
-	General dominance is computed as:
-	
-	\begin{equation}
-		C_{X_v} = \frac{\sum_{p}^{i} C^{i}_{X_v}}{p}
-	\end{equation}
-	%CXv=Σpi=1CiXvp
-	
-	Where, $C^{i}_{X_v}$ are the conditional dominance statistics for $X_v$ with $i$ IVs. 
-	Hence, the general dominance statistics are the arithmetic average of all the conditional dominance statistics for an IV.
 	
 	In the section below, I transition to discussing some of the nuances of CDVs for the application of DA.
 	
@@ -485,22 +490,38 @@
 	It is worth noting that the next set of results, focusing on the conditional dominance statistics, are insightful for showing how $IV_2$ resulted in being second most important across subsets of models.
 	
 	Finally, as has been implied in the discussion of the general dominance results, the LRM and CRM based general dominance statistics are similar; in fact the Percentage of the $R^2$ values explained by each IV are identical to two decimal places.
-	The general dominance statistic results then support my contention that CRM-based DA is a straightforward extension of LRM-based DA.
+	The general dominance statistic results then support my contention that CRM-based DA is a straightforward extension of LRM-based DA using an $R^2$ that is computed slightly differently but is conceptually identical to the explained variance $R^2$.
 	
-	The next section discusses the more stringent conditional dominance statistics.
+	The next section discusses the more conditional dominance statistics; which as sub-components of the general dominance statistics.
 	
 	The results for the LRM and CRM-based DA conditional dominance statistics are reported in Figure X1. 
-	The graphic format is useful with conditional dominance statistics as it makes the trends in terms of determining conditional dominance easier to see.
+	The graphic format is useful with conditional dominance statistics as it makes the trends across number of IVs included in the model, as well as conditional dominance determination, easier to see.
 	 
 	\includegraphics{includes/condit_gph}
 	
 	Figure X1 shows that $IV_4$ conditionally dominates all three of the other IVs.
 	By contrast, the three other IVs have no conditional dominance relationships.
-	This is because the three lines describing $IV_1$, $IV_2$, and $IV_4$'s conditional dominance statistics cross over one another between the three IV and all 4 IV in the model points.
+	This is because the three lines describing $IV_1$, $IV_2$, and $IV_3$'s conditional dominance statistics cross over one another between the three IV and all 4 IV in the model.
 	
-	... note the similarity between the lines across models again...
+	It is worth noting that the ordering of the conditional dominance statistics at 4 IVs in the model for the LRM and CRM mirror the order of the standardized coefficient magnitudes ... whereas for 3 IVs or less in the model the ordering match the order of the correlations with the DV...
 	
-	... only iv4 can be completely dominant - note that and that it is. ...
+	The conditional dominance statistics reinforce the similarity across LRM and CRM DA results as the trends for each IV across numbers of IVs in the model are nearly identical.
+	Again, the difference between LRM-based DA and CRM-based DA is primarily in the choice of fit metric and underlying predictive model; implementation between both is identical and, when the results are designed to be similar, the DA statistics produced are similar.
+	
+	The $R^2$ values in Table X5 can also be used to determine complete dominance of IVs over one another.  
+	Because $IV_1$, $IV_2$, and $IV_3$ have no conditional dominance designations over one another, they cannot have complete dominance designations.
+	$IV_4$ does conditionally dominate each of $IV_1$, $IV_2$, and $IV_3$; thus, $IV_4$ could possible also completely dominate each other IV.  
+	The pattern of $R^2$ values in Table X5 shows that for both the LRM and CRM results, $IV_4$ completely dominates $IV_1$, $IV_2$, and $IV_3$.
+	
+	\subsubsection{Section Summary}
+	
+	This section intended to provide a detailed example of the estimation of both a LRM and CRM as well as DAs based on those models.
+	The examples provided were based on generated data that were produced with the intention of being (reasonably) realistic as well as being as comparable as possible across LRM and CRM results.
+	The data analytic examples of DA presented provide empirical evidence for the theoretical expectation that a LRM and CRM that are based on the same underlying causal structure should produce similar DA results.
+	This demonstration thus serves to illustrate the straightforward generalization of DA from LRM to CRMs.
+	
+	Although DA with both LRM and CRMs can produce similar results when sharing an underlying causal structure, there are additional complexities to CRM estimation that do not have similar analogs with LRM given the data generating mechanisms underlying count DVs.
+	The discussion of DA with CRMs turns, in next section, to a more extensive discussion of this additional complexity and when it can impact DA statistics and determinations.
 	
 	
 	%this part below (other than final transition) needed in this section?
@@ -599,13 +620,14 @@
 	
 \section{Additional Consideration for CRMs: Exposure}
 	
-	CDMs, as models of counts of discrete events, implicitly assume that the events being counted are comparable.  
-	An observation with a count of 10 is assumed to have had the same chance to get that count of 10 events as any other observation with 10 events.  
-	That is, that the probability of observing events for both observations is equal.
-	By contrast, it is possible two observations with an observed count of 10 arrived at their count with different underlying probabilities of observing events and number of times the events could be realized into a count.  
-	For example, two 10 counts could have resulted from an observation with an event probability of .1 over 100 'trials'.  
-	Another could have arisen from an observation with an event probability of .01 over 1000 'trials'.  
+	CRMs, as models of counts of discrete events, implicitly assume that the events realized in the data are derived from a data generating mechanism that had the same number of chances to observe events, or same number of trials, across observations.
+	In CRMs, an observation with a count of 10 events is assumed to have had the same chance to get that count of 10 events as any other observation with 10 events.  
+	The problem that arises when the number of chances to observe events is different across observations is more straightforward to discuss in the context of an example.
+	Imagine that one of the observations with 10 events discussed above had 100 chances to observe an event but the other had 1,000 chances.
+	These two counts of 10 then imply starkly different probabilities of observing an event (i.e., $\frac{10}{100} = .1$ and $\frac{10}{1000} = .01$).
 	In data, such equifinality in counts from different underlying probabilities can arise from observations that are units reflecting populations of different sizes or units reflecting different time periods in which events could occur (i.e., unequal employment tenures).
+	
+	...
 	
 	CDMs can control for such unequal \emph{exposure} to the count generating conceptual phenomenon using what is known as an \emph{offset} term.  
 	The offset term is usually assumed to be natural log transformed for a CDM and enters into the CDM with a coefficient of 1.
